--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ services:
           - "5000:5000"
         
     frontend:
-        build: ./client
+        build:
+          context: ./client
+          args:
+            VITE_API_URL=http://13.60.198.183:5000/api
         container_name: frontend
         restart: always
         env_file:
